# 0711-gitchain

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  gitchain-import-7736606982.js  gitchain.config.example.yaml  hardhat.config.ts  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: ci.yml  deploy.yml
.husky/: pre-commit
apps/api/: Dockerfile  bosch-import.ts  gitchain-import-7736606982.cjs  package.json  tsconfig.json
apps/hub/: Dockerfile  next.config.js  package.json  tailwind.config.js  tailwind.config.mjs  tsconfig.tsbuildinfo
apps/verify/: package.json
cli/: gitchain.ts  package.json  tsconfig.json
contracts/: ContentCertificate.sol
database/: migrate.sh  migrate.ts  schema.sql
deployments/: base-mainnet.json
docs/: CONNECTOR-ARCHITECTURE.md  MANUFACTURER-ONBOARDING.md  MIGRATION-FROM-STUDIO.md  PLATFORM-TASKLIST.md  PRODUCT-CONTAINER-STANDARD.md  PRODUCTION-READINESS.md  SPRINT-1.md  api-reference.md  container-types.md  env-reference.md  getting-started.md  inject-api.md  verification.md
examples/: batch-upload.ts  langchain-agent.py  openai-inject.ts
scripts/: bosch-import.ts  deploy-contract.ts  deploy-ethers.mjs  deploy.sh  migrate-bosch.ts  setup.sh
sdks/python/: README.md  pyproject.toml
sdks/python/gitchain/: __init__.py  client.py  inject.py  langchain.py  openai.py  types.py
test-containers/: container_8738208680.json  import_test_container.py  import_test_container_v2.py  import_test_container_v3.py
(+202 files in other folders)
