[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitchain"
version = "0.1.0"
description = "GitChain Python SDK - Blockchain-verified context injection for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "0711 Intelligence", email = "dev@0711.io" }
]
keywords = ["ai", "llm", "context", "blockchain", "verification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://gitchain.0711.io"
Documentation = "https://gitchain.0711.io/docs"
Repository = "https://github.com/C-0711/0711-gitchain"

[project.optional-dependencies]
langchain = ["langchain>=0.1.0"]
openai = ["openai>=1.0.0"]
dev = ["pytest", "pytest-asyncio", "black", "mypy", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["gitchain"]
